[tool.poetry]
name = "pyfeyn2"
version = "2.0.0"
description = "PyFeyn is a package which makes drawing Feynman diagrams simple and programmatic.  Feynman diagrams are important constructs in perturbative field theory, so being able to draw them in a programmatic fashion is important if attempting to enumerate a large number of diagram configurations is important. The output quality of PyFeyn diagrams (into PDF or EPS formats) is very high, and special effects can be obtained by using constructs from PyX, which PyFeyn is based around"
authors = ["Alexander Puck Neuwirth <alexander@neuwirth-informatik.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydot = "*"
particle = "*"
xsdata = {version = "*", extras = ["cli","lxml","soap"]}
pylatex = "*"
dot2tex = "*"
matplotlib = "*"
Wand = "*"
numpy = "*"
pyx = ">=0.12"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-napoleon = "*"
nbsphinx = "*"
jupyter-sphinx = "*"
sphinx-autoapi = "*"
sphinx_autobuild = "*"
sphinx_math_dollar = "*"
myst-parser  = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "*"
pytest-cov =  "*"
pytest-profiling =  "*"
pytest-line-profiler-apn = ">=0.1.3"
ipython =  "*"
jupyterlab =  "*"
jupyter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
